Final intro lab commit

--- a/Bayesian_Introduction_Lab/Bayesian_Intro_Lab-example.ipynb
+++ b/Bayesian_Introduction_Lab/Bayesian_Intro_Lab-example.ipynb
@@ -119,6 +119,9 @@
    "outputs": [],
    "source": [
     "# assign your exoplanet property Kepler data to a variable here\n",
+    "# you will want to use the pandas function \"to_numpy()\" so that you can\n",
+    "# easily feed your variable to your kernel density estimator and do your\n",
+    "# further manipulations\n",
     "prior_data = KEPL.koi_teq\n",
     "prior_data = prior_data.dropna().to_numpy()"
    ]
@@ -238,7 +241,7 @@
    "metadata": {},
    "source": [
     "<div class=\"hw\">\n",
-    "(b) Describe what is qualitatively different about your TESS data and the prior Kepler data. Why might the distribution have changed between the two series of observations? </div>\n",
+    "(b) Describe what is qualitatively different about your TESS data and the prior Kepler data. Why might the distribution have changed between the two series of observations? Is this distribution unimodal like the Kepler data? How might your definition of uni vs bi vs multimodal rely on your KDE parameters, like bandwidth?</div>\n",
     "    \n",
     "**Answer:**"
    ]
